--- a/src/styles/LoginForm.css
+++ b/src/styles/LoginForm.css
@@ -1,6 +1,6 @@
 .form-container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 50px auto;
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -59,7 +59,7 @@
 .nav-link {
     text-align: center;
     display: block;
-    margin-top: 1rem;
+    margin: 1rem auto;
 }
 .error {
     color: palevioletred;
